--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,6 +3,6 @@
 @tailwind utilities;
 
 body {
-    @apply bg-gradient-to-tr from-blue-300 to-green-300;
+    @apply bg-gradient-to-tr from-blue-300 to-green-300 bg-fixed;
     font-family: 'Helvetica', 'Arial', sans-serif;
 }
